# dotnet-deptree

./: .flake8  pyproject.toml
.github/workflows/: publish.yml
dotnet_deptree/: cli.py  dotnet.py  generator.py
dotnet_deptree/dag/: dag.py  path_based_dependency_tree.py
